--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "src/*/**": [
-      "yarn lint --fix"
+      "yarn lint --fix", "yarn test --bail"
     ]
   },
   "dependencies": {
@@ -20,6 +27,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.1.2",
     "@types/node": "18.8.4",
     "@types/react": "18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
@@ -31,7 +42,10 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "prettier": "2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
 }
