--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "prepare": "husky install",
+    "postinstall": "husky install",
     "test": "jest",
     "test:watch": "yarn test --watch"
   },
@@ -18,13 +18,15 @@
   },
   "lint-staged": {
     "src/*/**": [
-      "yarn lint --fix", "yarn test --bail"
+      "yarn lint --fix",
+      "yarn test --bail"
     ]
   },
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yarn.lock": "^0.0.1-security"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
@@ -41,9 +43,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.1",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "pinst": "^3.0.0",
     "prettier": "2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
