--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "next": "12.3.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
@@ -49,6 +50,7 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-styled-components": "^7.1.1",
     "pinst": "^3.0.0",
     "prettier": "2.7.1",
     "ts-node": "^10.9.1",
